[package]
name = "common-strings"
version = "0.1.1"
edition = "2021"
author = "Merlin Fuchs"
readme = "README.md"
repository = "https://github.com/merlinfuchs/common-strings"
license = "MIT"
description = "Macro for storing common strings as enum variants "

[dependencies]
serde = { version = "1.0", optional = true }

[features]
default = []
serde = ["dep:serde"]
